# compute-graph-viewer

./: .gitignore  .gitmodules  CHANGELOG.md  DESIGN.md  README.md  ai-for-design-skills.html  arkui-dark-token-plan.md  button-preview.html  design-system-preview.html  design_system.pen  design_system2.pen  index.html  launch-v2.html  launch.html  mem_viewer.html  mem_viewer_doc.md  ppt-web.html  ppt.pen  pto.pen  scan_passes.js  style-audit-summary.md  visual-test.html
.learnings/: LEARNINGS.md
Ascend operator matrix/: ascend-operator-matrix_V2.html
CANNVisual/: 910B-architecture-notes.md  950-wireframe.html  manifest.json  notes-910b-aicore-internals.md  notes-950-architecture.md
HNSW/: **第五章：HNSW 算法原理与核心实现**.md  HNSW-whitepaper.html  HNSW.md  shared.css  相似性搜索.md
Model/: model_arch_studio (2).html
OP_migration/: ascendport_migration_V3.html
ParallelDemo/: dist.html  knowledge.md
PycPlacer/: .gitignore  CMakeLists.txt  README.md  __init__.py  benchmarks.py  blif_parser.py  example.py  h_anchor_fast.py  install_benchmarks.py  pycplacer-whitepaper.html  requirements.txt  run_real_benchmark.py  setup.py  shared.css  test_incremental_update.py  visualization.py
PycPlacer/src/: bindings.cpp  h_anchor_core.cpp  h_anchor_core.hpp
ai-cpu-aicore/: INSTRUCTION_VISUALIZATION_PRD.md  ai_cpu_ai_core_operator_beginner.md  index.html  whitepaper.html
ai-for-design-open-slide/: open-slide.config.ts  package-lock.json  package.json
archive/: README.md  deepseek_model_hierarchy_demo.html  launch2.html  nav.html  temp.js
ascend-950-mode-select/: index.html
ascend-950-workbench-demo/: WORKBENCH_DESIGN.md  feature_taxonomy.html  hardware-frame.html  index.html  (+4 more)
(+401 files in other folders)
